<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CEWi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device">My devices</string>
    <string name="show_devices">My devices</string>
    <string name="show_accounts">My account</string>
    <string name="title_activity_ui">CEWi</string>
    <string name="waiting">Please wait</string>
    <string name="signIn">Please sign in to continue</string>
    <string name="exit">Exit</string>
    <string name="title_activity_login">Login</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="nameIsMissing">Name is missing!</string>
    <string name="invalidEmail">E-mail is not valid!</string>
    <string name="passwordMissing">Password is missing!</string>
    <string name="passwordsNotMatch">Passwords are not match!</string>
    <string name="save_user">Remember me!</string>
    <string name="login">Login</string>
    <string name="loginSuccess">Login successful</string>
    <string name="loginFailed">Login failed</string>
    <string name="logout">Logout</string>
    <string name="logoutSuccess">Logout successful</string>
    <string name="logoutFailed">Logout failed</string>
    <string name="registerUserSuccess">Successful registration</string>
    <string name="registerUserFailed">Registration failed</string>
    <string name="cause">Cause</string>
    <string name="error">Error</string>
    <string name="reconnect">Reconnect</string>
    <string name="failedToConnect">Failed to connect</string>
    <string name="qrFailure">Failed to read QR code</string>
    <string name="wrongQR">QR code format error!</string>
    <string name="connectedTo">Connected to</string>
    <string name="connectedToCewiServer">Connected to CEWi server</string>
    <string name="register">Register</string>
    <string name="title_activity_register_user">Register</string>
    <string name="add_device_access">Add</string>
    <string name="remove_device_access">Remove</string>
    <string name="device_added">Device added</string>
    <string name="device_removed">Device removed</string>
    <string name="config_device_access">Set WiFi</string>
    <string name="rename_device">Rename</string>
    <string name="config_device_select">Select device to configure</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="switch_state">Switch state</string>
    <string name="title_activity_device_config">Pick a WiFi network</string>
    <string name="notifications">Notifications</string>
    <string name="select_indicator">Select indicator</string>
    <string name="set_notifications">Set notifications</string>
    <string name="when_turns_on">When turns on</string>
    <string name="when_turns_off">When turns off</string>
    <string name="when_turns_below">When turns below</string>
    <string name="when_turns_above">When turns above</string>
    <string name="is_turned_on">is turned on</string>
    <string name="is_turned_off">is turned off</string>
    <string name="is_turned_below">is turned below</string>
    <string name="is_turned_above">is turned above</string>
    <string name="valuesMustBeNumbers">Values must be numbers!</string>
    <string name="valueOf">Value of</string>
    <string name="invalidValue">Invalid value</string>
    <string name="nothingToRemove">Nothing to remove</string>

</resources>
