<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="72sp"
            android:textStyle="bold"
            android:textColor="@color/cewiblue"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/show_devices"
            android:onClick="onShowDevices"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            style="@style/CEWiButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/show_accounts"
            android:onClick="onShowAccounts"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            style="@style/CEWiButtonStyle" />

        <!--     <Button -->
        <!--         android:id="@+id/button3" -->
        <!--         android:layout_width="fill_parent" -->
        <!--         android:layout_height="wrap_content" -->
        <!--         android:gravity="center" -->
        <!--         android:text="@string/exit" -->
        <!--         android:onClick="onExitClicked" -->
        <!--         android:layout_marginBottom="@dimen/activity_vertical_margin"
                     style="@style/CEWiButtonStyle"/> -->

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/logout"
            android:onClick="onLogoutClicked"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            style="@style/CEWiButtonStyle" />

        <!--<Button-->
            <!--android:id="@+id/button5"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/reconnect"-->
            <!--android:onClick="onReconnectClicked"-->
            <!--android:layout_marginBottom="@dimen/activity_vertical_margin"
             style="@style/CEWiButtonStyle" />-->

    </LinearLayout>
</ScrollView>